package usantatecla.mastermind.views.console;

import java.util.List;

import usantatecla.mastermind.controllers.ProposalController;
import usantatecla.mastermind.types.Color;
import usantatecla.mastermind.types.Error;

public class ProposalView {

	public void interact(ProposalController proposalController) {
		Error error;
		do {
			List<Color> colors = new ProposedCombinationView(proposalController).read();
			error = proposalController.addProposedCombination(colors);
			if (!error.isNull()) {
				new ErrorView(error).writeln();
			}
		} while (!error.isNull());

		new GameView(proposalController).write();
	}

}
