package usantatecla.mastermind.views.graphics;

import usantatecla.mastermind.controllers.Controller;
import usantatecla.mastermind.views.View;

public class GraphicsView extends View {

    @Override
    public void interact(Controller controller) {

    }
}
